fixed overflow hidden horz issue

--- a/source/assets/css/site.css.scss
+++ b/source/assets/css/site.css.scss
@@ -23,6 +23,7 @@ body {
 .site-main {
   opacity: 0;
   padding-top: 91vh;
+  overflow-x: hidden;
   @media (min-width: $mq-laptop) {
     
   }
